--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --env production",
+    "start": "webpack-dev-server --env development"
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,33 @@
   "bugs": {
     "url": "https://github.com/cncuckoo/webpack-demo/issues"
   },
-  "homepage": "https://github.com/cncuckoo/webpack-demo#readme"
+  "homepage": "https://github.com/cncuckoo/webpack-demo#readme",
+  "devDependencies": {
+    "autoprefixer": "^8.3.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
+    "cssnano": "^3.10.0",
+    "dotenv": "^5.0.1",
+    "error-overlay-webpack-plugin": "^0.1.4",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "git-revision-webpack-plugin": "^2.5.1",
+    "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.17.3",
+    "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "postcss-loader": "^2.1.4",
+    "purecss": "^1.0.0",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
+    "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.3",
+    "webpack-merge": "^4.1.2"
+  },
+  "dependencies": {
+    "eslint": "^4.19.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
+  }
 }
